INT-1406: Add existing activity bug fixes and z-index fixes
git-svn-id: http://svn.moodlerooms.com/Moodle/2.0/branches/plugins@15777 f529b7b8-409e-e885-f664-9768b4ed42ab

--- a/styles.css
+++ b/styles.css
@@ -78,11 +78,8 @@
 #format_flexpage_region_radios {
     margin-top: 5px;
     margin-bottom: 10px;
-}
-
-.format_flexpage_existing_activity_list {
-    max-height: 600px;
-    overflow: auto;
+    margin-right: 20px;
+    white-space: nowrap;
 }
 
 .format_flexpage_existing_activity_list li {
